<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".characterDetails.CharacterDetailsActivity">

    <LinearLayout
        android:id="@+id/characterDetailsPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/detailsAvatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/detailsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingBottom="2dp"
                    tools:text="Character Name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/detailsActiveJobIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/redmage" />

                    <TextView
                        android:id="@+id/detailsActiveJob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:textSize="12sp"
                        tools:text="Lv. 90 Red Mage" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:stretchColumns="0">

            <TableRow style="@style/tableRowPadded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/details_table_server" />
                <TextView
                    android:id="@+id/detailsTableDcServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:text="Chaos - Moogle" />
            </TableRow>

            <TableRow style="@style/tableRowPadded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/details_table_race" />
                <TextView
                    android:id="@+id/detailsTableRaceAndTribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:text="Au Ra - Raen" />
            </TableRow>

            <TableRow style="@style/tableRowPadded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/details_table_name_day" />
                <TextView
                    android:id="@+id/detailsTableNameDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:text="26th Whatever" />
            </TableRow>

            <TableRow style="@style/tableRowPadded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/details_table_guardian" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/detailsTableDeityIcon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/placeholder" />
                    <TextView
                        android:id="@+id/detailsTableDeityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        tools:text="Idk bro" />
                </LinearLayout>
            </TableRow>

            <TableRow style="@style/tableRowPadded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/details_table_town" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end">
                    <ImageView
                        android:id="@+id/detailsTableTownIcon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/placeholder" />
                    <TextView
                        android:id="@+id/detailsTableTownName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        tools:text="Gridania" />
                </LinearLayout>
            </TableRow>

            <TableRow style="@style/tableRowPadded" android:id="@+id/detailsTableRowCompany">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical "
                    android:textSize="15sp"
                    android:text="@string/details_table_company" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/detailsTableCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="15sp"
                        tools:text="Order of the Twin Adder" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/detailsTableCompanyRankIcon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            tools:src="@drawable/placeholder" />
                        <TextView
                            android:id="@+id/detailsTableCompanyRankName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            tools:text="Chief Serpent Sergeant" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/character_details_jobs"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jobsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_anim_char_list_enter"
                tools:listitem="@layout/item_job" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>